Fix skills and framework alignment

--- a/style.css
+++ b/style.css
@@ -175,9 +175,9 @@ li {
 .title h4 {
   font-family: 'Crete Round', serif;
   padding-left: 20px;
-  padding-top: 120px;
   font-size: 40px;
   line-height: 52px;
+  
 }
 
 hr {
@@ -382,7 +382,7 @@ hr {
   line-height: 24px;
   padding-top: 40px;
   margin-left: 40px;
-  margin-right: 20px;
+  margin-right: 12%;
 }
 
 .resume-btn {
@@ -410,6 +410,7 @@ hr {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
   gap: 2rem;
   color: white;
   font-family: "Inter", sans-serif;
@@ -419,6 +420,9 @@ hr {
 #skills-list {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   gap: 2rem;
   color: white;
   font-family: "Inter", sans-serif;
@@ -428,6 +432,10 @@ hr {
 #skills h3 {
   color: white;
   font-family: 'Meera Inimai', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-weight: 700;
   margin: 3rem 0;
   font-size: 32px;
@@ -437,11 +445,12 @@ hr {
 
 .skills-title {
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  justify-content: center;
 }
 
 .orange-icon {
   width: 1.2rem;
   height: 1.2rem;
-  margin-right: 10px;
+  margin-right: 8%;
 }
